src/objects/QC_VfsearchQueries__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This is used to store queries which needs to be executed in vfseach controller.</description>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueryFields__c</fullName>
        <description>Comma separated list of fields to be queried/searched.</description>
        <label>QueryFields</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QueryValue__c</fullName>
        <label>QueryValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>QC_VfsearchQueries</label>
</CustomObject>